finished main details

--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
     <div class="row">
       <div class="col-md-6">
           <img src="assets/media/product-ejam.png" alt="Product Image" class="img-fluid">
-          <img src="user-avatar.jpg" class="mr-3" alt="User Avatar" width="64">
-                <div class="media-body">
-                    <h5 class="mt-0">Customer Name</h5>
-                    <p>Review text goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class ="row">
+          <img src="assets/media/customer.png" class="customer" alt="User Avatar">
+                <div class="col-9">
                     <div class="text-warning">
                         <span class="fa fa-star"></span>
                         <span class="fa fa-star"></span>
@@ -63,9 +62,13 @@
                         <span class="fa fa-star"></span>
                         <span class="fa fa-star"></span>
                     </div>
+                    <p class ="name">KEN.T  <span class = "verified"><i class="fa-solid fa-certificate"></i> Verified User</span></p>
                 </div>
+                <p>“As soon as the Clarifions arrived I put one in my bedroom. 
+                This was late in the afternoon. When I went to the bedroom in the evening it smelled clean.
+                When I went to bed I felt I could breathe better. Wonderful.”</p>
+            </div>
       </div>
-    
       <div class="col-md-6">
           <p class ="normal-heading"><span class="blue-heading">ONE TIME ONLY</span> price for 6 extra Clarifion for only <span class="blue-heading">$14 each</span> ($84.00 total!)</p>
         <div class ="row">
@@ -94,16 +97,37 @@
         </div>
         <button class="my-button col-12" id="myButton" onclick="alert('Select me for the Job!')">Yes - Claim my discount</button>
         </div>
-        <h2>30-Day Guarantee</h2>
-        <p>We are confident in the quality of our products. If you are not completely satisfied with your purchase, you may return it within 30 days for a full refund.</p>
+        <table>
+  
+            <tr>
+              <td>Free shipping</td>
+              <td><i class="fa-solid fa-lock"></i> Secure 256-bit SSL encryption.</td>
+              <td><img src="assets/media/visa.jpg" alt="Product Image">
+                <img src="assets/media/shop-pay.jpg" alt="Product Image">
+                <img src="assets/media/paypal.jpg" alt="Product Image">
+                <img src="assets/media/mastercard.jpg" alt="Product Image">
+                <img src="assets/media/gpay.jpg" alt="Product Image">
+                <img src="assets/media/apple-pay.jpg" alt="Product Image">
+                <img src="assets/media/amex.jpg" alt="Product Image">
+            </td>
+            </tr>
+        </table>
+
+        <button class="col-12" id="no-thanks" onclick="alert('Still Select me for the position!')">No thanks, I don’t want this.</button>
+        <div class ="row">
+            <img src="assets/media/100-percent.png" class="col-3" alt="GUARANTEE-Badge">
+        <p class = "col-9 guarantee-para">If you are not completely thrilled with your Clarifion - We have a <b>30 day satisfaction guarantee.</b>
+             Please refer to our return policy at the bottom of the page for more details. Happy Shopping!</p>
+        </div>
       </div>
     </div>
-
-  </div>
-
-
 </div>
-
+<footer class ="container-fluid banner">
+<div class = "row">
+<div class = "left-footer col-6">Copyright (c) 2023 | Clarifionsupport@clarifion.com </div>
+<div class = "right-footer col-6"> <i class="fa-solid fa-lock"></i> Secure 256-bit SSL encryption.</div>
+</div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
